# WigglesGP

./: .gitignore  LICENSE  README.md  __init__.py  damping.py  fitting.py  io_utils.py  power.py  pyproject.toml
comparison_tests/: log_comparison_full_damped.npz  log_comparison_full_damped.properties.ini  log_comparison_full_damped.ranges  log_comparison_full_damped.txt  log_comparison_full_damped_checkpoint.txt  log_comparison_full_damped_checkpoint_intermediate.json  log_comparison_full_damped_gp.npz  log_comparison_full_damped_intermediate.json  log_comparison_full_damped_results.pkl  log_comparison_full_damped_stats.json  log_comparison_full_damped_timing.json  log_comparison_full_undamped.npz  log_comparison_full_undamped.paramnames  log_comparison_full_undamped.txt  log_comparison_full_undamped_gp.npz  log_comparison_full_undamped_intermediate.json  log_comparison_full_undamped_results.pkl  log_comparison_full_undamped_stats.json  log_comparison_full_undamped_timing.json  log_comparison_linear_only.npz  log_comparison_linear_only.txt  log_comparison_linear_only_checkpoint.txt  log_comparison_linear_only_checkpoint_intermediate.json  log_comparison_linear_only_gp.npz  log_comparison_linear_only_intermediate.json  log_comparison_linear_only_results.pkl  log_comparison_linear_only_stats.json  log_comparison_linear_only_timing.json  log_three_scenario_comparison_constraints.tex  paper_like_k025_full_damped.npz  paper_like_k025_full_undamped.npz  paper_like_k025_linear_only.npz
configs/: example_simulations.yaml  log_simulations.yaml
emulators/: linear_sigma_gp.pkl  (+1 more)
(+47 files in other folders)
